Fix: Change contrast ratio of footer text for accessibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,9 @@ select:focus {
 }
 
 
+#footer strong {
+  color: #f5f271;
+}
 
 /* ====================== Grid Layout ====================== */
 .row {
